# gantry

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILLS_PLAN.md  TODO.md  gantry.toml  test-ollama-chat.sh
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  sse_client.rs
cli/src/ui/: app.rs  chat.rs  mod.rs
crates/gantry-proto/: Cargo.toml
crates/gantry-proto/src/: client.rs  events.rs  lib.rs  llm.rs  rpc.rs  server.rs  sse_server.rs
crates/gantry-types/: Cargo.toml
crates/gantry-types/src/: lib.rs
gantry-app/: Cargo.toml
gantry-app/src/: main.rs
gantry-cli/: Cargo.toml
gantry-cli/src/: main.rs
gantry-client/: Cargo.toml
gantry-client/src/: lib.rs  rpc.rs
gantry-contract/: Cargo.toml
gantry-core/: Cargo.toml  SYSTEM.md
gantry-core/src/: agent_factory.rs  agentsmd.rs  app.rs  dirs.rs  event_bus.rs  events.rs  input.rs  lib.rs  message.rs  project_registry.rs  provider_config.rs  resource_loader.rs  service.rs  session_store.rs  skills.rs  state.rs  streaming.rs  system_prompt.rs  types.rs
gantry-core/src/chat/: events.rs  mod.rs  service.rs  stream.rs
gantry-core/src/config/: credentials.rs  mod.rs  project.rs  provider.rs
gantry-core/src/fs/: mod.rs  project_registry.rs  session_registry.rs
gantry-core/src/metrics/: context_window.rs  mod.rs  request_usage.rs  usage.rs
gantry-core/src/project/: mod.rs  registry.rs  resource_loader.rs  system_prompt.rs
gantry-core/src/provider/: agent.rs  agent_factory.rs  catalog.rs  client.rs  hook.rs  mod.rs  registry.rs
gantry-core/src/providers/: cortecs.rs  mod.rs
gantry-core/src/session/: handle.rs  log.rs  manager.rs  mod.rs  registry.rs  state.rs  store.rs  tree.rs
gantry-core/src/tools/: bash.rs  boundary.rs  edit.rs  grep.rs  messages.rs  mod.rs  read.rs  tree.rs  write.rs
gantry-core/src/tools/rig/: edit.rs
gantry-rpc/: Cargo.toml
gantry-rpc/src/: client.rs  lib.rs  server.rs  session_manager.rs
gantry-rpc/src/wire/: events.rs  message.rs  mod.rs
gantry-server/: Cargo.toml
gantry-server/src/: lib.rs  main.rs  rpc.rs
gantry-server/src/app/: event_bus.rs  llm_port.rs  mod.rs  service.rs  state.rs
gantry-server/src/transport/: rpc.rs
gantry-tools/: Cargo.toml
gantry-tools/src/: bash.rs  edit.rs  grep.rs  lib.rs  read.rs  tree.rs  write.rs
gantry-tui/: AGENTS.md  CLAUDE.md  Cargo.toml
gantry-tui/examples/: throbbers.rs
gantry-tui/src/: app.rs  connection.rs  lib.rs  main.rs  message.rs  model.rs  picker.rs  runtime.rs  statusline.rs  theme.rs  update.rs  utils.rs  view.rs
gantry-tui/src/agent_statusline/: mod.rs  widget.rs
gantry-tui/src/app_statusline/: widget.rs
gantry-tui/src/attachment_picker/: mod.rs  widget.rs
gantry-tui/src/chat/: mod.rs  model.rs  state.rs  view.rs  widget.rs
gantry-tui/src/command_picker/: mod.rs  model.rs  state.rs  view.rs  widget.rs
gantry-tui/src/commands/: health.rs  mod.rs  model.rs  new.rs  providers.rs  quit.rs  sessions.rs  tree.rs  usage.rs
gantry-tui/src/effects/: throbber.rs
gantry-tui/src/features/: mod.rs
gantry-tui/src/features/app_statusline/: mod.rs  widget.rs
gantry-tui/src/features/attachment_picker/: state.rs  widget.rs
gantry-tui/src/features/chat/: mod.rs  state.rs  widget.rs
gantry-tui/src/features/command_picker/: mod.rs  state.rs  widget.rs
gantry-tui/src/features/input/: mod.rs  state.rs  widget.rs
gantry-tui/src/features/model_picker/: mod.rs  state.rs  widget.rs
gantry-tui/src/features/provider_config/: mod.rs  state.rs  widget.rs
gantry-tui/src/features/session_picker/: mod.rs  state.rs  widget.rs
gantry-tui/src/features/tree/: mod.rs  state.rs  widget.rs
gantry-tui/src/features/usage/: mod.rs  state.rs  widget.rs
gantry-tui/src/input/: attachment_picker_view.rs  attachment_picker_widget.rs  mod.rs  model.rs  state.rs  view.rs  widget.rs
gantry-tui/src/model/: mod.rs  update.rs
gantry-tui/src/model_picker/: mod.rs  model.rs  state.rs  view.rs  widget.rs
gantry-tui/src/provider_config/: widget.rs
gantry-tui/src/providers/: mod.rs  model.rs  state.rs  view.rs  widget.rs
gantry-tui/src/session_picker/: state.rs  widget.rs
gantry-tui/src/sessions/: mod.rs  model.rs  state.rs  view.rs  widget.rs
gantry-tui/src/tree/: mod.rs  model.rs  view.rs  widget.rs
gantry-tui/src/ui/: app.rs  chat.rs  command_picker.rs  input.rs  mod.rs
gantry-tui/src/usage/: mod.rs  model.rs  view.rs  widget.rs
gantry-tui/src/views/: app.rs  attachment_picker.rs  chat.rs  command_picker.rs  input.rs  mod.rs  model_picker.rs  providers.rs  sessions.rs  status_message.rs  statusline.rs  table.rs  tree.rs  usage.rs
gantry-tui/src/widgets/: table.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/ui/: app.rs  chat.rs  message.rs  mod.rs
