[workspace]
resolver = "2"
members = [
    "cli",
    "server",
    "crates/gantry-types",
    "crates/gantry-proto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ivenw"]

[workspace.dependencies]
anyhow = "1.0"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
jsonrpsee = { version = "0.26", features = ["server", "server-core", "ws-client", "client"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
