[workspace]
resolver = "3"
members = [
  "gantry-cli",
  "gantry-tui",
  "gantry-server",
  "gantry-core",
  "gantry-rpc",
  "gantry-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ivenw"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
jsonrpsee = { version = "0.26", features = [
  "server",
  "server-core",
  "ws-client",
  "client",
  "macros",
] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
