[workspace]
resolver = "3"
members = [
  "gantry-app",
  "gantry-tui",
  "gantry-core",
  "gantry-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Iven Winkelmann"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
