[package]
name = "gantry"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gantry"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
gantry-types = { path = "../crates/gantry-types" }
gantry-proto = { path = "../crates/gantry-proto" }
futures = "0.3"
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
