[package]
name = "gantry-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gantry"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
gantry-rpc = { path = "../gantry-rpc" }
gantry-server = { path = "../gantry-server" }
gantry-tui = { path = "../gantry-tui" }
