[package]
name = "gantry-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
futures = "0.3"
gantry-tools = { path = "../gantry-tools" }
rig = { package = "rig-core", version = "0.33.0" }
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
