[package]
name = "gantry-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
jiff = { version = "0.2", features = ["serde"] }
dirs.workspace = true
git2.workspace = true
futures = "0.3"
gantry-tools = { path = "../gantry-tools" }
rig = { package = "rig-core", version = "0.36.0" }
schemars = "1.2.1"
serde.workspace = true
reqwest.workspace = true
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = { version = "0.25", features = ["serde"] }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
