[package]
name = "gantry-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
gantry-core = { path = "../gantry-core" }
jiff = "0.2"
jsonrpsee.workspace = true
rig = { package = "rig-core", version = "0.33.0" }
serde.workspace = true
serde_json = "1.0"
tokio.workspace = true
uuid.workspace = true
