[package]
name = "gantry-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gantry-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
uuid.workspace = true
gantry-contract = { path = "../gantry-contract" }
futures = "0.3"
llm = { version = "1.3.7", features = ["ollama"] }
async-trait = "0.1"
serde_json = "1.0"
