[package]
name = "gantry-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gantry-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gantry-core = { path = "../gantry-core" }
gantry-rpc = { path = "../gantry-rpc" }
jsonrpsee.workspace = true
rig = { package = "rig-core", version = "0.33.0" }
serde_json = "1.0"
tokio.workspace = true
uuid.workspace = true
