[package]
name = "gantry-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gantry-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
futures = "0.3"
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
gantry-core = { path = "../gantry-core" }
