[package]
name = "gantry-proto"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
jsonrpsee = { workspace = true, features = ["server-core", "ws-client", "client-core", "macros", "server"] }
serde.workspace = true
gantry-types = { path = "../gantry-types" }
serde_json = "1.0"
llm = { version = "1.3.7", features = ["ollama"] }
async-stream = "0.3"
futures = "0.3"
uuid.workspace = true
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tokio-test = "0.4"
